# bookmarker

./: .env.template  .gitignore  README.md  docs.md  pyproject.toml
migrations/: env.py
migrations/versions/: 17531f859663_initial_commit.py  cfcaf1314dc0_add_indices.py
src/bookmarker/: __init__.py
src/bookmarker/cli/: base.py  fetchers.py  helpers.py  init_config.py  main.py  summarizers.py
src/bookmarker/core/: config.py  database.py  exceptions.py  fetchers.py  main.py  models.py  summarizers.py
src/bookmarker/services/: base.py  fetchers.py  summarizers.py
tests/: conftest.py  test_cli.py  test_cli_helpers.py  test_cli_init_config.py  test_core_database.py  test_core_fetchers.py  test_core_models.py  test_core_summarizers.py  test_fetchers.py  test_main.py  test_models.py  test_services_base.py  test_services_fetchers.py  test_services_summarizers.py  test_summarizers.py
