[project]
name = "bookmarker"
version = "0.1.0"
description = "A CLI tool to manage the online articles you want to read. Too much content and too little time? Bookmarker helps you pick what to read."
readme = "README.md"
authors = [
    { name = "Kishan Patel", email = "kishanpatel789@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "python-decouple>=3.8",
    "sqlmodel>=0.0.25",
]

[project.scripts]
bookmarker = "bookmarker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.poe.tasks]
test = "pytest"
cov = "pytest --cov=src --cov-report=term-missing"
lint = "uv tool run ruff check ."
format = "uv tool run ruff format ."
tc = "uv tool run ty check ."
db_upgrade = "uv run alembic upgrade head"
